Resolves: fdo#51772 failure to import a specific .rtf file

In this example the xCharacterStyles->getByName(aCharStyle) throws, and the
whole import is abandoned

i.e.  xRet.set(xCharacterStyles->getByName(aCharStyle), uno::UNO_QUERY);

so to keep things simple wrap the entire block in a try catch and return
an empty xRet. Could use the hasByName around the specific failing query.

Change-Id: I4f4970534cc2ff15c7d96ff2ee0a9affcfce1737
Signed-off-by: Miklos Vajna <vmiklos@suse.cz>
Signed-off-by: Norbert Thiebaud <nthiebaud@gmail.com>